# apps/cs-api/src/main/java/com/ttam/cs/feature/inquiry/api/http/v1/dto/request/BatchUpdateInquiryStatusRequest.java
@@ -27,7 +27,6 @@ public record BatchUpdateInquiryStatusRequest(
             List<String> channel,
             String userCode,
             List<CustomerInquiry.Status> status,
-            String keyword,
             OffsetDateTime start,
             OffsetDateTime end,
             Boolean isManual,
